--- a/genthresh/package.json
+++ b/genthresh/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@noble/bls12-381": "^1.3.0",
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
     "postcss": "^8",
