--- a/genthresh/package.json
+++ b/genthresh/package.json
@@ -12,6 +12,7 @@
     "@noble/bls12-381": "^1.3.0",
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
+    "pinia": "^2.0.21",
     "postcss": "^8",
     "roboto-fontface": "*",
     "tailwindcss": "^3",
@@ -29,6 +30,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "vue-cli-plugin-pinia": "~0.1.5",
     "vue-cli-plugin-tailwind": "~3.0.0",
     "vue-cli-plugin-vuetify": "~2.5.5",
     "webpack-plugin-vuetify": "^2.0.0-alpha.0"
