--- a/genthresh/package.json
+++ b/genthresh/package.json
@@ -12,6 +12,7 @@
     "@noble/bls12-381": "^1.3.0",
     "autoprefixer": "^10",
     "core-js": "^3.8.3",
+    "file-saver": "^2.0.5",
     "pinia": "^2.0.21",
     "postcss": "^8",
     "roboto-fontface": "*",
