--- a/genthresh/package.json
+++ b/genthresh/package.json
@@ -18,6 +18,7 @@
     "roboto-fontface": "*",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
+    "vue-contenteditable": "^4.0.4",
     "vue-router": "^4.0.3",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
