--- a/genthresh/package.json
+++ b/genthresh/package.json
@@ -20,6 +20,7 @@
     "vue": "^3.2.13",
     "vue-contenteditable": "^4.0.4",
     "vue-router": "^4.0.3",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
   },
