--- a/genthresh/package.json
+++ b/genthresh/package.json
@@ -15,6 +15,7 @@
     "file-saver": "^2.0.5",
     "pinia": "^2.0.21",
     "postcss": "^8",
+    "qrcode.vue": "^3.4.0",
     "roboto-fontface": "*",
     "socket.io-client": "^4.6.1",
     "tailwindcss": "^3",
